# watchmood-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: data_models.py
src/agents/: agents_experiment.py  model.py  mood_agent.py  recommendation_agent.py  taste_agent.py
src/clients/: tmdb.py
src/db/: chroma.py  movies.py  reviews.py  sqlite.py  taste_profile.py
src/scripts/: seed_movies.py
